--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body style="font-family: sans-serif; text-align: center; margin-top: 100px;">
   <h1>فایل لیست قیمت</h1>
   <p>برای دانلود فایل اکسل روی دکمه زیر کلیک کنید:</p>
-  <a href="لیست%20قیمت%20123.xlsx" download style="padding: 10px 20px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 5px;">دانلود فایل Excel</a>
+  <a href="index.xlsx" download style="padding: 10px 20px; background-color: #4CAF50; color: white; text-decoration: none; border-radius: 5px;">دانلود فایل Excel</a>
 </body>
 </html>
